# FinancialTracking

./: .gitignore  Logic.py  README.md  expense.xlsx  pyproject.toml
TestDataSet/categorization/: combined_expense_dataset.csv  finalDataset.csv  transaction_category_dataset.csv
app/: Logic.py  app.py  auth.py  bank_statements.csv  db.py  dependencies.py  models.py  schemas.py
app/ML/: predictor.py  test_predictor.py
app/notebooks/: transaction_classifier.ipynb
app/notebooks/.ipynb_checkpoints/: transaction_classifier-checkpoint.ipynb
app/routes/: analytics.py  auth.py  budget.py  transaction.py  upload.py
app/services/: insights.py  pdf_parser.py
app/services/banks/: FEDERAL.py  HDFC.py  IDFC.py  PNB.py  SBI.py
app/services/parsers/: csv_parser.py  helpers.py
app/services/route_services/: analytics_service.py  auth_service.py  budget_service.py  transaction_service.py  upload_service.py
tests/: test_db.py  test_hash.py
