[project]
name = "financialtracking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "fastapi>=0.136.3",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "groq>=1.4.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "passlib[bcrypt]>=1.7.4",
    "pdfplumber>=0.11.9",
    "psycopg2-binary>=2.9.12",
    "pwdlib>=0.3.0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "scikit-learn>=1.9.0",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.58.0",
    "uvicorn[standard]>=0.48.0",
]
